--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+header section ul {
     list-style-type: none;
 }
 
-header div ul li {
+header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,11 +50,16 @@ p {
     font-size: 16px;
 }
 
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/*Below is the main image on the page.*/
 .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    
     background-size: cover;
     background-position: center;
 }
@@ -85,7 +90,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/*Nine elements below can be combined into one class for optimization*/
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,7 +105,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/*Three elements below can be combined into one class for optimization*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,7 +120,7 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/*Three elements below can be combined into one class for optimization*/
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,7 +138,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*Three elements below can be combined into one class for optimization*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -173,21 +178,6 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .footer {
     padding: 30px;
     clear: both;
@@ -195,6 +185,6 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+.footer h3 {
     font-size: 20px;
 }
